--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 header{
    
     margin: auto;
-    width: 80%;
+    width: 100%;
     height: 200px;
 }
 
@@ -17,7 +17,7 @@ header{
 }
 
 .barra{
-    width: 90%;
+    width: 70%;
     height: 20px;
   background-color: rgb(229, 150, 4);
   margin: auto;
@@ -27,6 +27,9 @@ ul.parte-centrale{
     align-items: center;
  justify-content: center;
  width:40%;
+}
+.parte-destra{
+    text-align: right;
 }
 
 
@@ -42,14 +45,13 @@ div > p{
 ul{
     list-style-type: none;
 }
-.riga{
-    width:100%;
-    height:180px ;
+main>section{
+    padding: 4rem 0;
 }
 
 .riga-blue{
     width:100% ;
-    height: 160px;
+    height: 200px;
     background-color: rgb(22, 22, 255);
     margin-bottom: 20px;
 
@@ -62,55 +64,51 @@ ul{
     border-style:dotted;
  
 }
-
-div.fondo-grigio{
-    background-color:#d3d3d3;
-   
-   
-}
-div.fondo-nero{
-    background-color: #23272a;
-
-  
+.container{
+    width: 70%;
+    height: 250px;
     
 }
+
 .fondo-grigio-alto{
-    background-color:#d3d3d3;
-    height: 350px;
+    height: 300px;
 }
+.bg-gray{
+    background-color:#d3d3d3;
+    height: 400px;
+}
+.bg-nero{
+    background-color: #23272a;
+    height: 400px;
+    margin-bottom: 3px;
+}
+
 .rettangolino-blue{
     background-color:#1e90ff;
-    flex-basis: 60%;
-    height: 150px;
-    margin-right:50px;
+   width: 70%;
+    height: 160px;
     margin: auto; 
 }
 .quadrato-rosa{
     background-color: #ffc0cb;
-     flex-basis: 40%;
-    height: 150px;
+    width: 30%;
+    height: 160px;
     margin: auto;
   
 }
-.wrapper{
-    display: flex;
-    background-color:#ffffff;
-    height: 200px;
-    width: 70%; 
 
-}
 .quadrato-verde{
     background-color: #228b22;
-    flex-basis: 70%;
-    height: 250px;
-    margin: auto;
+    width: 100%;
+    height: 300px;
+    
 }
 
 .rettangolino-rosa{
     background-color: #f08080;
-    height: 150px;
-    flex-basis:30% ;
-    margin: auto;
+    height: 250px;
+    width: 40%;
+   margin-top:15%;
     border-style: dotted;
     border-color: black;
 
@@ -119,18 +117,20 @@ div.fondo-nero{
 }
 .rettangolino-verde{
     background-color:#20b2aa ;
-    height: 150px;
-    flex-basis:20% ;
-    margin: auto;
+    height: 250px;
+    width: 30%;
+    margin-top:15%;
     border-style: dotted;
     border-color: white;
 }
 .footer-bar{
     width: 70%;
-    height: 30px;
+    height: 40px;
   background-color:#7fffd4;
   margin: auto;
   justify-content: space-between;
+ 
+ 
 
 
 
@@ -146,4 +146,9 @@ div.fondo-nero{
     font-size: 12px;
     margin: 5px 0 5px 0;
   
+}
+.bg-footer{
+    background:  #23272a;
+    height: 50px;
+   
 }
